@@ -25,8 +25,8 @@
  *
  * ============================================================ */
 
-#ifndef SHOWFOTO_H
-#define SHOWFOTO_H
+#ifndef SHOW_FOTO_H
+#define SHOW_FOTO_H
 
 // Qt includes
 
@@ -140,6 +140,7 @@ private Q_SLOTS:
     void slotExpoBlending();
     void slotPanorama();
     void slotVideoSlideshow();
+    void slotSendByMail();
 
 Q_SIGNALS:
 
@@ -154,6 +155,6 @@ private:
     Private* const d;
 };
 
-}   // namespace ShowFoto
+} // namespace ShowFoto
 
-#endif /* SHOWFOTO_H */
+#endif // SHOW_FOTO_H
