@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="556" name="showfoto" translationDomain="digikam" >
+<gui version="557" name="showfoto" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -142,6 +142,7 @@
         <Action name="htmlgallery" />
         <Action name="calendar" />
         <Action name="videoslideshow" />
+        <Action name="sendbymail" />
     </Menu>
 
     <Menu name="settings" noMerge="1"><Text>&amp;Settings</Text>
