@@ -830,10 +830,12 @@ void EditorWindow::setupStandardActions()
     createExpoBlendingAction();
     createCalendarAction();
     createVideoSlideshowAction();
+    createSendByMailAction();
 
     m_metadataEditAction->setEnabled(false);
     m_expoBlendingAction->setEnabled(false);
     m_calendarAction->setEnabled(false);
+    m_sendByMailAction->setEnabled(false);
 
 #ifdef HAVE_KSANE
     m_ksaneAction->setEnabled(false);
@@ -1418,6 +1420,7 @@ void EditorWindow::toggleStandardActions(bool val)
     m_presentationAction->setEnabled(val);
     m_calendarAction->setEnabled(val);
     m_expoBlendingAction->setEnabled(val);
+    m_sendByMailAction->setEnabled(val);
 
 #ifdef HAVE_KSANE
     m_ksaneAction->setEnabled(val);
@@ -3014,6 +3017,7 @@ void EditorWindow::setupSelectToolsAction()
     actionModel->addAction(m_metadataEditAction,          postCategory);
     actionModel->addAction(m_presentationAction,          postCategory);
     actionModel->addAction(m_expoBlendingAction,          postCategory);
+    actionModel->addAction(m_sendByMailAction,            postCategory);
 
 #ifdef HAVE_HTMLGALLERY
     actionModel->addAction(m_htmlGalleryAction,           postCategory);
