@@ -125,6 +125,7 @@
 #include "dbinfoiface.h"
 #include "calwizard.h"
 #include "expoblendingmanager.h"
+#include "mailwizard.h"
 
 #ifdef HAVE_MARBLE
 #   include "geolocationedit.h"
@@ -1837,4 +1838,10 @@ void ImageWindow::slotExpoBlending()
     ExpoBlendingManager::instance()->run();
 }
 
-}  // namespace Digikam
+void ImageWindow::slotSendByMail()
+{
+    MailWizard w(this, new DBInfoIface(this, d->thumbBar->urls()));
+    w.exec();
+}
+
+} // namespace Digikam
