@@ -181,6 +181,7 @@ private Q_SLOTS:
     void slotExpoBlending();
     void slotPanorama();
     void slotVideoSlideshow();
+    void slotSendByMail();
 
 private:
 
