@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="556" name="lighttablewindow" translationDomain="digikam" >
+<gui version="557" name="lighttablewindow" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -50,14 +50,15 @@
 
     <Menu name="Tools"><text>&amp;Tools</text>
         <Action name="import_scan" />
-        <Action name="metadata_edit"/>
-        <Action name="geolocation_edit"/>
+        <Action name="metadata_edit" />
+        <Action name="geolocation_edit" />
         <Separator/>
         <Action name="expoblending" />
         <Action name="panorama" />
         <Action name="htmlgallery" />
         <Action name="calendar" />
         <Action name="videoslideshow" />
+        <Action name="sendbymail" />
     </Menu>
 
     <Menu name="settings" noMerge="1"><Text>&amp;Settings</Text>
